--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.81"
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["ws"] }
+fastrand = "2.0.2"
+futures-util = "0.3.30"
+ring = "0.17.8"
 thiserror = "1.0.58"
 tokio = { version = "1.37.0", features = ["full"] }
-tokio-websockets = "0.7.0"
+tokio-websockets = { version = "0.7.0", features = ["client", "fastrand", "native-tls", "ring"] }
 
 [[bin]]
 name = "client"
